--- a/style.css
+++ b/style.css
@@ -1,3 +1,18 @@
+:root {
+    --bg-color: #d6e7e4;
+    --card-color: #222e34;
+}
+
+@font-face {
+    font-family: "Manrope";
+    src: url(Fonts/Manrope-VariableFont_wght.ttf);
+}
+
+@font-face {
+    font-family: "Arvo";
+    src: url(Fonts/Arvo-Regular.ttf);
+}
+
 html, body {
     height: 100%;
     width: 100%;
@@ -8,11 +23,11 @@ html, body {
     font-weight: 400;
     font-style: normal;
     scroll-behavior: smooth;
-    background-color: rgb(214, 227, 231);
+    background-color: var(--bg-color);
 }
 
 #overview-bg {
-    background: linear-gradient(50deg, rgba(65,86,136,1) 0%, rgba(11,94,113,1) 35%, rgba(0,113,86,1) 100%);
+    background: linear-gradient(50deg, #415688 0%, #0b5e71 35%, #007156 100%);
     height: 100%;
     width: 100%;
     /* box-shadow: 0px 2px 3px #050b0edd; */
@@ -21,7 +36,7 @@ html, body {
 #overview {
     position: fixed;
     text-align: center;
-    background-color: #222e34;
+    background-color: var(--card-color);
     /* box-shadow: 2px 2px 3px #050b0ebb; */
     border-radius: 0px;
     transform: translate(-50%, -50%);
@@ -40,7 +55,7 @@ html, body {
     color: #dce9f4;
     margin: 0;
     width: 0;
-    font-size: 2.25cqw;
+    font-size: calc(0.5em + 1.25cqw);
     font-weight: 700;
     transition: width 2s, font-size 0.5s;
 }
@@ -49,7 +64,7 @@ html, body {
     color: #90a9bf;
     margin: 0;
     width: 0;
-    font-size: 1.95cqw;
+    font-size: calc(0.5em + 0.95cqw);
     font-weight: 300;
     transition: width 1.75s, font-size 0.5s;
 }
@@ -66,7 +81,7 @@ html, body {
     color: #dce9f4;
     margin: 0;
     width: 100%;
-    font-size: 3cqw;
+    font-size: calc(0.5em + 2cqw);
     font-weight: 800;
     transition: width 0.9s, font-size 0.5s;
 }
@@ -75,7 +90,7 @@ html, body {
     color: #90a9bf;
     margin: 0;
     width: 100%;
-    font-size: 2.6cqw;
+    font-size: calc(0.5em + 1.6cqw);
     font-weight: 300;
     transition: width 0.85s, font-size 0.5s;
 }
@@ -84,12 +99,21 @@ html, body {
     margin: 50px;
     color: #90a9bf;
     text-decoration: none;
-    font-size: 0.9em;
+    font-size: 0.8em;
     transition: all 0.15s;
 }
 
 #scroll-down:hover {
     color: #7c8a96;
+    /* transition: all 0.15s; */
+}
+
+.concealer {
+    position: absolute;
+    background-color: var(--card-color);
+    /* background-color: red; */
+    height: 100%;
+    width: 100%;
     transition: all 0.15s;
 }
 
@@ -98,22 +122,53 @@ html, body {
 }
 
 .card {
+    position: relative;
+    opacity: 0;
     color: #dce9f4;
-    background-color: #222e34;
+    background-color: #0b5e71;
     /* box-shadow: 2px 2px 3px #19232c; */
-    width: 35%;
+    width: 30vw;
     padding: 65px;
+    margin: 30px 45px 30px auto;
+    overflow: hidden;
+    transition: all 0.5s;
+}
+
+.card-visible {
     margin: 30px 95px 30px auto;
-    font-size: 1.1em;
+    opacity: 1;
+}
+
+.card-content {
+    position: relative;
+    width: 25vw;
+    /* width: 70%; */
+}
+    
+.reveal {
+    position: absolute;
+    background-color: #222e34;
+    top: 0;
+    margin: -65px;
+    margin-top: 0;
+    height: 100%;
+    width: 100%;
     transition: all 0.5s;
 }
 
 .card:hover {
-    padding: 95px;
-    transition: all 0.5s;
+    width: 35%;
+}
+
+.card:hover .reveal {
+    width: 0;
+    margin-right: 100%;
 }
 
 #contact {
+    position: absolute;
+    left: 45px;
+    bottom: 25px;
     display: flex;
     gap: 15px;
 }
@@ -124,20 +179,19 @@ html, body {
 }
 
 #contact img {
-    opacity: 1;
-    transition: all 0.2s;
+    transition: all 0.15s;
 }
 
 #contact img:hover {
     opacity: 0.5;
-    transition: all 0.2s;
-}
-
-/* 
-.visible {
-    opacity: 1;
+    transition: all 0.15s;
 }
 
 .hidden {
-    opacity: 0;
-} */
+    opacity: 0 !important;
+    pointer-events: none;
+}
+
+h1 {
+    font-family: "Arvo", serif;
+}
