--- a/style.css
+++ b/style.css
@@ -1,16 +1,31 @@
 :root {
-    --primary-1: hsl(239, 59%, 60%);
     --neutral-1: hsl(200, 0%, 90%);
     --neutral-2: hsl(200, 0%, 80%);
     --neutral-3: hsl(200, 0%, 5%);
     --neutral-4: hsl(200, 0%, 7%);
-    --support-1: hsl(255, 36%, 47%);
-    --support-2: hsl(215, 50%, 57%);
+}
+
+@property --primary-1 {
+    syntax: "<color>";
+    inherits: false;
+    initial-value: hsl(10, 60%, 60%);
+}
+
+@property --support-1 {
+    syntax: "<color>";
+    inherits: false;
+    initial-value: hsl(250, 40%, 50%);
+}
+
+@property --support-2 {
+    syntax: "<color>";
+    inherits: false;
+    initial-value: hsl(20, 50%, 60%);
 }
 
 ::selection {
     background-color: var(--neutral-1);
-    color: var(--primary-1);
+    color: var(--support-1);
 }
 
 @font-face {
@@ -33,8 +48,36 @@ html, body {
     font-style: normal;
     color: var(--neutral-1);
     scroll-behavior: smooth;
-    /* background-color: var(--neutral-4); */
     overflow-x: clip;
+}
+
+nav {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 90px;
+    border-style: solid;
+    border-width: 0 0 0 0.8px;
+    border-color: var(--neutral-1);
+    padding-left: 15px;
+    width: fit-content;
+    z-index: 999;
+    transition: all 0.25s;
+}
+
+nav a {
+    text-decoration: none;
+    letter-spacing: 1px;
+    color: var(--neutral-1);
+    border-style: solid;
+    border-width: 0 0 0.8px 0;
+    border-color: hsla(0, 0%, 0%, 0);
+    padding-bottom: 5px;
+    transition: all 0.5s;
+}
+
+nav a:hover {
+    border-color: var(--neutral-1);
 }
 
 .background {
@@ -42,32 +85,32 @@ html, body {
     background: linear-gradient(50deg, var(--support-2) 0%, var(--primary-1) 35%, var(--support-1) 100%);
     height: 100%;
     width: 100%;
+    transition: --primary-1 5s;
     z-index: -1;
 }
 
 .overview-bg {
     position: relative;
-    /* background-color: var(--neutral-4); */
     height: 100%;
     width: 100%;
-    /* z-index: -2; */
 }
 
 .main-bg {
     display: grid;
     margin: 0 14vw 0 14vw;
-    /* grid-template-columns: 50% 50%; */
     grid-template-columns: 40% 60%;
+    border: solid;
+    border-width: 0.8px 0 0.8px 0;
+    border-color: var(--neutral-1);
+    padding-top: 90px;
 }
 
 .overview {
     position: sticky;
     text-align: center;
-    /* transform: translate(-50%, -50%); */
     width: fit-content;
     margin: 0 auto 60px auto;
     top: 40vh;
-    /* left: 50vw; */
     height: 20vh;
     white-space: nowrap;
     transition: all 0.5s;
@@ -91,7 +134,6 @@ html, body {
 
 .overview-left {
     position: sticky;
-    width: 26vw;
     top: 15vh;
     transition: all 0.5s;
 }
@@ -109,10 +151,6 @@ html, body {
 }
 
 .scroll-down {
-    /* position: absolute; */
-    /* top: 100%; */
-    /* left: 50%; */
-    /* transform: translate(-50%, -50%); */
     transition: all 0.15s;
 }
 
@@ -144,12 +182,10 @@ html, body {
 .link a {
     display: inline-block;
     padding: 15px 0 15px 0;
-    /* text-align: center; */
     margin: 0 auto 0 auto;
     width: 100%;
     color: var(--neutral-1);
     text-decoration: none;
-    /* font-weight: 600; */
     font-size: 1.1em;
 }
 
@@ -159,7 +195,7 @@ html, body {
 
 .link hr {
     display: inline-block;
-    background-color: var(--neutral-2);
+    background-color: var(--neutral-1);
     margin: 5px;
     height: 0.8px;
     border: none;
@@ -174,14 +210,7 @@ html, body {
 .card {
     position: relative;
     opacity: 1;
-    /* background-color: var(--neutral-4); */
-    /* box-shadow: 24px 24px 30px var(--neutral-3); */
-    /* border-style: solid;
-    border-width: 3px;
-    border-color: var(--primary-1); */
-    /* border-radius: 25px; */
     width: 90%;
-    /* padding: 45px; */
     margin: 0 auto 90px auto;
     overflow: hidden;
     transition: all 0.5s;
@@ -194,28 +223,7 @@ html, body {
 .card-content {
     position: relative;
     padding: 45px;
-    /* width: 60%; */
 }
-
-/* .reveal {
-    position: absolute;
-    background-color: var(--neutral-4);
-    top: 0;
-    margin: -90px;
-    margin-top: 0;
-    height: 100%;
-    width: 100%;
-    transition: all 0.5s;
-}
-
-.card:hover {
-    width: 28vw;
-}
-
-.card:hover .reveal {
-    width: 0;
-    margin-left: 100%;
-} */
 
 .card-header {
     position: relative;
@@ -223,20 +231,10 @@ html, body {
     font-size: 1.4em;
     font-weight: 700;
     margin-bottom: 30px;
-    /* border-bottom: solid; */
-    /* border-width: 0.8px; */
-    /* border-color: hsla(0, 0%, 0%, 0); */
 }
 
-/* .card:hover .card-header {
-    opacity: 1;
-    border-color: var(--neutral-1);
-    left: 93%;
-} */
-
 .contact {
-    /* display: flex; */
-    display: none;
+    display: flex;
     gap: 15px;
 }
 
@@ -246,7 +244,7 @@ html, body {
 }
 
 .contact img {
-    opacity: 0.8;
+    opacity: 0.7;
     transition: all 0.15s;
 }
 
@@ -286,14 +284,12 @@ html, body {
     display: flex;
     flex-wrap: wrap;
     margin-top: 20px;
-    /* width: 26vw; */
     gap: 5px;
 }
 
 .columns {
     display: flex;
     flex-wrap: wrap;
-    /* width: 100%; */
     gap: 15%;
 }
 
@@ -313,12 +309,9 @@ b {
 }
 
 span {
-    /* font-weight: 600; */
     font-size: 0.9em;
     color: var(--neutral-1);
-    /* background-color: var(--primary-1); */
     padding: 4px 10px 4px 10px;
-    /* opacity: 0.6; */
     border-style: solid;
     border-width: 0.8px;
     border-radius: 25px;
@@ -366,7 +359,8 @@ h1 {
 
     .main-bg {
         display: block;
-        margin: 0;
+        width: 90%;
+        margin: 0 auto 0 auto;
     }
 
     .main-right {
@@ -374,67 +368,10 @@ h1 {
     }
 
     .card {
-        width: 50vw;
-        margin: 0 auto 90px auto;
-        /* box-shadow: 24px 24px 40px var(--neutral-2), 0px 0px 40px var(--neutral-2); */
-    }
-
-    .card:hover {
-        width: 50vw;
-    }
-
-    .card-content {
-        width: 50vw;
-        margin: 0 auto 0 auto;
-    }
-
-    .columns {
-        width: 50vw;
-    }
-
-    .skills {
-        width: 50vw;
-    }
-
-    .card hr {
         width: 100%;
     }
 
-    .card-header {
-        opacity: 1;
-        position: static;
-        transform: rotate(0);
-        border: none;
-        margin-bottom: 30px;
-        left: 93%;
-    }
-}
-
-@media screen and (max-width: 640px) {
-    .card {
-        background-color: var(--neutral-4);
-        box-shadow: none;
-        width: 90vw;
-        padding: 45px;
-        /* margin-bottom: 45px; */
-        border-radius: 0;
-    }
-
     .card-content {
-        width: 80vw;
-        margin-left: 0;
-    }
-
-    .card:hover {
-        width: 100vw;
-    }
-
-    .skills {
-        width: 90vw;
-    }
-
-    .columns {
-        width: 90vw;
-        gap: 8vw;
+        padding: 45px 0 45px 0;
     }
 }
